# email-triage-openenv

./: API_REFERENCE.md  CHANGELOG.md  DATA_LOADING.md  DEVELOPMENT.md  Dockerfile  IMPLEMENTATION.md  README.md  baseline_results.json  config.py  data_loader.py  docker-compose.yml  environment.py  grader.py  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run.bat  run.sh  task_suite.py  tasks.py  test_environment.py  validate_openenv.py
data/: sample_emails.csv
server/: app.py
static/: index.html
